test/lit/vmi_new/vmi_vcmax_group_invalid.pto
// Copyright (c) 2026 Huawei Technologies Co., Ltd.
// This program is free software, you can redistribute it and/or modify it under the terms and conditions of
// CANN Open Software License Agreement Version 2.0 (the "License").
// Please refer to the License for details. You may not use this file except in compliance with the License.
// THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
// INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
// See LICENSE in the root of the software repository for the full text of the License.

// RUN: not ptoas --emit-pto-ir %s 2>&1 | FileCheck %s
// RUN: not pto-test-opt %s -vmi-lower-unified-to-legacy 2>&1 | FileCheck %s

// vcmax: group count must divide source lane count.

module {
  func.func @vcmax_group_no_divide(
      %src: !pto.vmi.vreg<64xf32>,
      %mask: !pto.vmi.mask<64xpred>)
      -> !pto.vmi.vreg<3xf32> {
    // CHECK: error: 'pto.vmi.vcmax' op group count 3 must divide source lane count 64
    %r = pto.vmi.vcmax %src, %mask {group = 3}
        : !pto.vmi.vreg<64xf32>, !pto.vmi.mask<64xpred> -> !pto.vmi.vreg<3xf32>
    return %r : !pto.vmi.vreg<3xf32>
  }
}
